About banner info added

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -59,10 +59,12 @@
 <div class="container-fluid">
 	<div class="row jumbotron">
 		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis velit ligula, nec pellentesque elit fermentum mattis. Donec quam tellus, dignissim sed iaculis at, congue ac dolor. Integer et ultricies eros. Suspendisse potenti. Nullam cursus lacus justo, malesuada scelerisque augue rutrum a. In facilisis varius sem. Maecenas porta id ipsum ac ultricies. Quisque non ullamcorper enim, eu molestie risus. </p>
+			<p class="lead">
+				The original purpose of this web app was to create a turn-based Pokemon fighting game that can be found in the mainline Pokemon games created by game freak. However, as time went on the complexity of implementing every pokemon and all of their moves and then having the user select what moves they wanted would have been too extreme for a project of this scope. So I adapted the system I made to create a basic turn-based game between two users, where they both have a party of three Pokemon and the winner is determined based on the pokemon "type", sort of like rock paper scissors. Press the button on the right to have a shot. 
+			 </p>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Learn More</button></a>
+			<a href="/game/battle"><button type="button" class="btn btn-outline-secondary btn-lg">Play Game</button></a>
 		</div>
 	</div>
 </div>
