--- a/views/pages/segments/footer.ejs
+++ b/views/pages/segments/footer.ejs
@@ -7,10 +7,10 @@
 
 			<div class="col-md-4">
 				<hr class="light">
-				<h5>Contact Details</h5>
+				<h5>Details</h5>
 				<hr class="light">
-				<p>07496359797</p>
-				<p>grant.shiels@btinternet.com</p>
+				<p>Grant Shiels</p>
+				<p>1804748@rgu.ac.uk</p>
 			</div>
 
 			<div class="col-md-4">
