Added favicon and fixed nav bar navigation

--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -3,6 +3,7 @@
 <head>
     <%- include('segments/header.ejs'); %>
     <!-- <script type="text/javascript" src="scripts/browserify-scripts/getLoginInput.js"></script> -->
+    <link rel="shortcut icon" type="image/ico" href="../../img/favicon.ico"/>
 
 </head>
 
