--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
 <!-- Top Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
+        <a class="navbar-brand" href="/"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
